airflow/logs/scheduler/2025-01-06/api-image.py.log
[2025-01-06T21:02:06.185+0000] {processor.py:161} INFO - Started process (PID=4132) to work on /opt/airflow/dags/api-image.py
[2025-01-06T21:02:06.187+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/api-image.py for tasks to queue
[2025-01-06T21:02:06.190+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:06.189+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:06.195+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:06.193+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/api-image.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/api-image.py", line 42
    'retry_delay': timedelta(minutes: 5),
                                    ^
SyntaxError: invalid syntax
[2025-01-06T21:02:06.196+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:06.238+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/api-image.py took 0.059 seconds
[2025-01-06T21:02:36.719+0000] {processor.py:161} INFO - Started process (PID=4145) to work on /opt/airflow/dags/api-image.py
[2025-01-06T21:02:36.721+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/api-image.py for tasks to queue
[2025-01-06T21:02:36.723+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:36.723+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:36.727+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:36.726+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/api-image.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/api-image.py", line 42
    'retry_delay': timedelta(minutes: 5),
                                    ^
SyntaxError: invalid syntax
[2025-01-06T21:02:36.728+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:36.769+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/api-image.py took 0.058 seconds
[2025-01-06T21:02:43.801+0000] {processor.py:161} INFO - Started process (PID=4153) to work on /opt/airflow/dags/api-image.py
[2025-01-06T21:02:43.803+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/api-image.py for tasks to queue
[2025-01-06T21:02:43.805+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:43.805+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:43.811+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:02:43.810+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/api-image.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/api-image.py", line 42
    'retry_delay': timedelta(minutes: 5),
                                    ^
SyntaxError: invalid syntax
[2025-01-06T21:02:43.812+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/api-image.py
[2025-01-06T21:02:43.844+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/api-image.py took 0.052 seconds
[2025-01-06T21:03:00.759+0000] {processor.py:161} INFO - Started process (PID=4159) to work on /opt/airflow/dags/api-image.py
[2025-01-06T21:03:00.761+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/api-image.py for tasks to queue
[2025-01-06T21:03:00.763+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:03:00.763+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/api-image.py
[2025-01-06T21:03:00.767+0000] {logging_mixin.py:188} INFO - [2025-01-06T21:03:00.766+0000] {dagbag.py:348} ERROR - Failed to import: /opt/airflow/dags/api-image.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 344, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/api-image.py", line 42
    'retry_delay': timedelta(minutes: 5),
                                    ^
SyntaxError: invalid syntax
[2025-01-06T21:03:00.768+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/api-image.py
[2025-01-06T21:03:00.809+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/api-image.py took 0.057 seconds
